@@ -20,3 +20,5 @@
 2014-01-05 - version 0.3.1:
     - Fixed errors in getPost when existing likes are fewer than request
     - Fixed error in how likes are converted into a data frame
+2014-02-07 - version 0.3.2:
+    - Fixed errors in getPost when there few likes/comments
